gcc/gcc/testsuite/algol60.dg/fail/forstmt1.a60
'comment' { dg-do compile } ;
'begin'
  'integer' i;
'comment' { dg-error "expected" } ;  'for' 4 := i 'do'
    ;
'end';
